--- a/index.html
+++ b/index.html
@@ -4,31 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Сучасна пекарня</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
       <nav>
-        <a href="#"></a>
-        <img src="./Images/logo.svg" alt="Логотип сучасної пекарні" />
+        <a href="./index.html">
+          <img src="./Images/logo.svg" alt="Логотип сучасної пекарні" />
+        </a>
         <ul>
-          <li><a href="#">Франшиза</a></li>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a class="link" href="#traditions-sections">Наші традиції</a></li>
+          <li><a class="link" href="#traditions-section">Шеф-кухарі</a></li>
+          <li><a class="link" href="#chef-section">Формати</a></li>
+          <li><a class="link" href="#join-us-section">Контакти</a></li>
         </ul>
       </nav>
-      <button type="button">Замовити дзвінок</button>
+      <button class="button" type="button">Замовити дзвінок</button>
     </header>
     <main>
       <!--  -->
-      <section><h1>Сучасна пекарня</h1></section>
       <section>
-        <ul>
+        <h1 class="hero-title"><span class="accent">Сучасна</span> пекарня</h1>
+      </section>
+      <section id="traditions-section">
+        <ul class="advantages-list">
           <li>Великий попит на ринку</li>
           <li>Доступні за бюджетом формати</li>
           <li>Досвідчена управлінська команда</li>
         </ul>
-        <h2>Новий формат традицій</h2>
+        <h2 class="section-title">Новий формат традицій</h2>
         <p>
           <span>shop bakery</span> — це пекарня, яка взяла все найкраще, і
           зберегла смак традиційної випічки та натуральність інгредієнтів.
@@ -40,8 +44,8 @@
         </p>
         <img src="./Images/baker-man.jpg" alt="Чоловік пекар з батонами" />
       </section>
-      <section>
-        <h2>Наші найкращі шеф-кухарі</h2>
+      <section id="chef-section">
+        <h2 class="section-title">Наші найкращі шеф-кухарі</h2>
         <ul>
           <li>
             <article>
@@ -64,35 +68,49 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Формати</h2>
-        <li>
-          <article>
-            <h3 lang="en">Walrus</h3>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h3 lang="en">Horseshoe</h3>
-          </article>
-        </li>
-        <li>
-          <article>
-            <h3 lang="en">Handleader</h3>
-          </article>
-        </li>
+      <section id="formats-section">
+        <h2 class="section-title">Формати</h2>
+        <ul>
+          <li>
+            <article>
+              <h3 lang="en">Walrus</h3>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 lang="en">Horseshoe</h3>
+            </article>
+          </li>
+          <li>
+            <article>
+              <h3 lang="en">Handleader</h3>
+            </article>
+          </li>
+        </ul>
       </section>
-      <section><h2>Приєднуйся до мережі пекарень</h2></section>
+      <section id="join-us-section">
+        <h2 class="section-title">Приєднуйся до мережі пекарень</h2>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2540.1636289098733!2d30.4912733!3d50.4566776!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d4ce637c006b2d%3A0xaf86385f19996ff0!2z0YPQuy4g0KHQtdGH0LXQstGL0YUg0KHRgtGA0LXQu9GM0YbQvtCyLCA1NCwg0JrQuNC10LIsIDAyMDAw!5e0!3m2!1sru!2sua!4v1731696432851!5m2!1sru!2sua"
+          width="603"
+          height="595"
+          style="border: 0"
+          allowfullscreen=""
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+      </section>
     </main>
+    class="link"
     <footer>
       <nav>
         <a href="#"></a>
         <img src="./Images/logo.svg" alt="Логотип сучасної пекарні" />
         <ul>
-          <li><a href="#">Франшиза</a></li>
-          <li><a href="#">Наші традиції</a></li>
-          <li><a href="#">Формати</a></li>
-          <li><a href="#">Контакти</a></li>
+          <li><a class="link" href="#traditions-sections">Наші традиції</a></li>
+          <li><a class="link" href="#traditions-section">Шеф-кухарі</a></li>
+          <li><a class="link" href="#chef-section">Формати</a></li>
+          <li><a class="link" href="#join-us-section">Контакти</a></li>
         </ul>
       </nav>
       <address>
@@ -109,15 +127,15 @@
 
           <li>
             <a href="#"></a>
-            <!-- facebook -->
+            <!-- facebook icon-->
           </li>
           <li>
             <a href="#"></a>
-            <!-- instagram -->
+            <!-- instagram icon-->
           </li>
         </ul>
         <a href="#" target="_blank">Політика конфіденційності</a>
-        <p>© 2022 Дані захищені</p>
+        <p>&copy; 2024 Дані захищені</p>
       </address>
     </footer>
   </body>
