added imgs to formats

--- a/index.html
+++ b/index.html
@@ -140,6 +140,11 @@
             <ul class="formats-list">
               <li class="formats-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./Images/walrus-format.jpg"
+                    alt="Walrus image"
+                  />
                   <h3 class="format-title" lang="en">Walrus</h3>
                   <div class="format-text">
                     <p>Площа: до 120 м2</p>
@@ -154,6 +159,11 @@
               </li>
               <li class="formats-item">
                 <article class="format-card">
+                  <img
+                    class="format-image"
+                    src="./Images/Horseshoe-format.jpg"
+                    alt="Horseshoe image"
+                  />
                   <h3 class="format-title" lang="en">Horseshoe</h3>
                   <div class="format-text">
                     <p>Площа: до 25 м2</p>
@@ -165,7 +175,12 @@
               </li>
               <li class="formats-item">
                 <article class="format-card">
-                  <h3 class="format-title" lang="en">Handleader</h3>
+                  <img
+                    class="format-image"
+                    src="./Images/Handlebar-format.jpg"
+                    alt="Handlebar image"
+                  />
+                  <h3 class="format-title" lang="en">Handlebar</h3>
                   <div class="format-text">
                     <p>Площа: до 15 м2</p>
                     <p>Меню: найпопулярніші позиції меню</p>
